<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_servicioweb"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen2ev.ServicioWeb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"/>

    <EditText
        android:id="@+id/elemen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"/>

    <TextView android:id="@+id/simbolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simbolo"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView android:id="@+id/punto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punto"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView android:id="@+id/densidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/densidad"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button android:id="@+id/btnvolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:onClick= "volver"/>

</LinearLayout>
