<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen2ev.Xml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo" />

    <Button
        android:id="@+id/btnBilbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilbo"
        android:onClick="bilbo" />

    <Button
        android:id="@+id/btnVito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitoria"
        android:onClick="vitoria" />

    <Button
        android:id="@+id/btnDonos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donos"
        android:onClick="donos" />

    <TextView
        android:id="@+id/txtresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"/>

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:onClick="volver" />
</LinearLayout>
