<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen2ev.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:text="@string/titulo"
        android:gravity="center"
        android:layout_x="25dp"
        android:layout_y="25dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/xml"
        android:onClick="xml"
        android:textSize="50px"
        android:gravity="center"
        android:layout_x="20dp"
        android:layout_y="100dp" />


    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/web"
        android:onClick="web"
        android:textSize="50px"
        android:gravity="center"
        android:layout_x="20dp"
        android:layout_y="175dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/multi"
        android:onClick="multi"
        android:textSize="50px"
        android:gravity="center"
        android:layout_x="20dp"
        android:layout_y="250dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/exit"
        android:onClick="exit"
        android:textSize="50px"
        android:gravity="center"
        android:layout_x="100dp"
        android:layout_y="400dp" />
</AbsoluteLayout>
